# python-websocket-example

./: app.py  pyproject.toml
templates/: index.html
